--- a/styles/style.css
+++ b/styles/style.css
@@ -17,7 +17,7 @@ html{background:#4496d3;font-family:"微软雅黑", "宋体";}
 /*head*/
 #header_area{position:relative;width:100%; min-width:1250px;height:161px;background:url(image/header-bg.png) no-repeat;}
 #header_area h1{display:none;}
-#welcome{color:#fdf;font-size:14px;font-weight:bold;position:absolute;left:420px;top:80px;}
+#welcome{color:#fff;font-size:14px;font-weight:bold;position:absolute;left:420px;top:80px;}
 #admin_nav{display:block;width:300px;height:20px;float:right;margin-top:5px;}
 #admin_nav li{display:inline-block;}
 #admin_nav li{*display:inline;}
@@ -37,7 +37,7 @@ html{background:#4496d3;font-family:"微软雅黑", "宋体";}
 #gteam_info a:hover{color:#FF3300;text-decoration:underline;}
 
 /*leftbar*/
-#leftbar{position:relative;width:20%;min-width:250px;height:700px;background:url(image/bg.png) no-repeat;}
+#leftbar{position:relative;width:20%;min-width:250px;height:1000px;background:url(image/bg.png) no-repeat;}
 #sub_nav{position:absolute;display:block;width:205px;height:350px;margin-top:40px;margin-left:20px;}
 .sub_nav_item{display:block;width:201px;height:42px;margin:20px 0 0 0;background:url(image/leftbar-item-bg.png) no-repeat;font-size:14px;font-weight:bold;color:#222;text-decoration:none;text-align:center;line-height:38px;}
 .sub_nav_item_alt{display:block;width:201px;height:42px;margin:20px 0 0 0;background:url(image/leftbar-item-bg.png) no-repeat;font-size:14px;font-weight:bold;color:#222;text-decoration:none;text-align:center;line-height:38px;cursor:pointer;}
@@ -49,7 +49,7 @@ html{background:#4496d3;font-family:"微软雅黑", "宋体";}
 .approval a:hover,.dorm_manage a:hover{padding:6px 10px 3px 10px; font-weight:bold;}
 /*main content*/
 
-#content{position:relative;width:80%;min-width:1000px;height:700px;margin-left:250px;margin-top:-700px;background:url(image/bg.png) no-repeat;}
+#content{position:relative;width:80%;min-width:1000px;min-height:1000px;margin-left:250px;margin-top:-1000px;background:url(image/bg.png) no-repeat;}
 #content h1{display:block;width:1000px;height:30px;margin:8px auto; text-align:center;color:#eed;font-size:20px;font-weight:bolder;}
 #info_input{width:1000px;}
 #basic_info,#home_info,#incampus_info,#stay_info,#other_info{display:inline-block; width:360px;height:190px;margin-left:88px;border:1px solid #BFD0E5;padding:8px 0 0 10px;}
@@ -70,3 +70,25 @@ html{background:#4496d3;font-family:"微软雅黑", "宋体";}
 #errorbox a{color:#f0f;position:absolute;bottom:20px;}
 
 #main_nav li .clicked {background:url(image/nav-item-down-bg.png) no-repeat;color:#dff;}
+
+
+.table_title{width:1000px;text-align:center;padding:10px 0;font-size:22px;font-weight:bold;}
+.table{width:600px;margin-left:200px;margin-top:20px;}
+.table table{border:1px solid #000;width:600px;padding:8px;}
+.table table th{height:25px;}
+.table table td{height:25px;}
+.table h3{width:600px;padding:8px 0;font-weight:bold;text-align:center;}
+
+#btns{width:600px;text-align:center;padding:10px;}
+#btns input{width:158px;height:37px;border:0;background:url(image/btn-bg.png) no-repeat;font-size:14px;font-weight:bold;cursor:pointer;}
+.discription{margin-left:10px;}
+
+
+
+
+
+
+
+
+
+
