--- a/trunk/styles/style.css
+++ b/trunk/styles/style.css
@@ -71,13 +71,15 @@ html{background:#4496d3;font-family:"微软雅黑", "宋体";}
 
 #main_nav li .clicked {background:url(image/nav-item-down-bg.png) no-repeat;color:#dff;}
 
-
+#apartpropagate #leftbar{position:relative;width:20%;min-width:250px;height:1200px;background:url(image/bg.png) no-repeat;}
+#apartpropagate #content{position:relative;width:80%;min-width:1000px;min-height:1200px;margin-left:250px;margin-top:-1200px;background:url(image/bg.png) no-repeat;}
+.division{border-color:#CCCCCC #BEC6CE #BEC6CE #CCCCCC;border-style:solid;border-width:1px 2px 2px 1px;padding:5px;background:#fff;}
 .table_title{width:1000px;text-align:center;padding:10px 0;font-size:22px;font-weight:bold;}
-.table{width:600px;margin-left:200px;margin-top:20px;}
-.table table{border:1px solid #000;width:600px;padding:8px;}
-.table table th{height:25px;}
-.table table td{height:25px;}
-.table h3{width:600px;padding:8px 0;font-weight:bold;text-align:center;}
+.table{width:750px;margin-left:100px;margin-top:20px;}
+.table table{width:735px;font-size:12px;}
+.table table th{height:30px;width:150px;background:#E2E8EB;border-right:1px solid #ccc;border-bottom:1px solid #fff;text-align:right;}
+.table table td{border-color:#DDDDDD;border-style:solid;border-width:1px;padding:5px;}
+.table h3{width:750px;padding:4px 0;color:#eee;font-size:12px;font-weight:bold;}
 
 #btns{margin-left:400px;padding:10px;}
 #btns input{width:158px;height:37px;border:0;background:url(image/btn-bg.png) no-repeat;font-size:14px;font-weight:bold;cursor:pointer;}
